完成商品分类功能

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -18,3 +18,10 @@ html,body,#app{
 .el-pagination{
     margin-top: 15px;
 }
+
+.el-cascader-panel {
+    max-height: 300px;
+    display: flex;
+    border-radius: 4px;
+    font-size: 14px;
+  }
